package io.nebula.xenogithub.ui.utils

/**
 * Created by nebula on 2025/3/7
 */
open class CommonUIState(
    open val isLoading: Boolean = false,
    open val isError: Boolean = false
)